2009-08-17  svu

	* libxklavier/xklavier_xkb.c: fixed a bug with XIE check,
	http://bugzilla.gnome.org/show_bug.cgi?id=583709

2009-07-20  svu

	* tests/Makefile.am: a bit of cleanup, thanks Samuli Suominen

2009-07-02  svu

	* libxklavier/xkl_engine.h: small fix for flag enum,
	https://bugs.freedesktop.org/show_bug.cgi?id=21578

2009-06-28  svu

	* libxklavier/xkl_engine.h, reference/tmpl/*: fix small gtk-doc issues
	* NEWS: preparing 4.0

2009-05-06  Sayamindu Dasgupta <sayamindu@laptop.org>

	https://bugs.freedesktop.org/show_bug.cgi?id=21578 - Make use 
	of glib-mkenums
	* libxklavier/Makefile.am: Use glib-mkenums
	* libxklavier/xklavier.c (xkl_engine_class_init): Do not use 
	g_flags_register_static for XklEngineFeatures here.
	* libxklavier/xklavier.h: Include xkl-enum-types.h

2009-06-24  svu

	* libxklavier/xklavier_config.c, libxklavier/xklavier_config_iso.c: avoiding
	duplicated config items (in main and extras)

2009-06-23  svu

	* configure.in, libxklavier/xkl_config_registry.h,
	libxklavier/xklavier_config.c, libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_config_xmm.c, libxklavier/xklavier_private.h,
	libxklavier/xklavier_private_xkb.h,
	libxklavier/xklavier_private_xmm.h, tests/test_config.c: use exotic
	materials optionally. Breaking API/ABI (incrementing version_info)
	* tests/test_monitor.c: eliminating unneeded code

2009-06-19  svu

	* libxklavier/xklavier_config.c, libxklavier/xklavier_config_iso.c,
	libxklavier/xklavier_private.h: use xml files with exotic layouts

2009-06-02  svu

	* libxklavier/xklavier_config_iso.c: changed g_snprintf to more
	semantically correct g_strlcpy, just to eliminate the warning.
	* libxklavier/xklavier_props.c: fixed potential crash, reassigning the
	pointer after realloc (credits go to Canonical)

2009-05-28  svu

	* libxklavier/xklavier_config.c: fixed handling of translated XML
	entities &lt; / &gt / &amp;.
	http://bugs.freedesktop.org/show_bug.cgi?id=21924

2009-05-14  svu
